Replace java 8-only Base64 method with an equivalent older method.